--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>quest-api-ghibli</title>
+    <title>Cards Studio Ghibli</title>
+    <meta name="description" content="A simple app to show Studio Ghibli films using React and TailwindCSS" />
   </head>
   <body>
     <div id="root"></div>
